# jupikchr

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  ROADMAP.md  dodo.py  lerna.json  package.json  pyproject.toml
.binder/: environment.yml  postBuild
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  release.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
examples/: Pikchr in Notebooks.ipynb  README.ipynb  jupyter-lite.json  jupyter_lite_config.json  untitled.pikchr
src/jupikchr/: __init__.py  _version.py  widget.py
